--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
         <div id="actionMessage"></div>
     </div>
 
+    <footer class="footer">Code By Ramla Eman</footer>
+
     <!-- OWN JS LINK  -->
     <script src="script.js"></script>
 </body>
